bin/testsuite/tests/compiler/src/errors/compiler4490.swg
#global testerror "Err0184"
#test
{
    const var a = 0
}